--- a/software/RFIDReader/RFIDReader.csproj
+++ b/software/RFIDReader/RFIDReader.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Emarin.cs" />
+    <Compile Include="Extensions\CancellationTokenExtensions.cs" />
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
